tests/specs/ecosystem/lala/appraisal/0_7_4.test
lala/appraisal/0.7.4
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'Tensor<DT, 2>'.
  get length(): number {
      ~~~~~~
    at file://<tmpdir>/src/utils/misc/matrix.ts:38:7

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'Tensor<DT, 2>'.
  filter(fn: (value: DType<DT>, row: number, _: DType<DT>[]) => boolean): Matrix<DT> {
  ~~~~~~
    at file://<tmpdir>/src/utils/misc/matrix.ts:77:3

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'Tensor<DT, 2>'.
  item(row: number, col: number): DTypeValue<DT> {
  ~~~~
    at file://<tmpdir>/src/utils/misc/matrix.ts:81:3

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'Tensor<DT, 2>'.
  slice(start?: number, end?: number): Matrix<DT> {
  ~~~~~
    at file://<tmpdir>/src/utils/misc/matrix.ts:109:3

Found 4 errors.

error: Type checking failed.

